block-wildcard-ingress-hosts/validatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: block-wildcard-ingress-webhook
  namespace: kube-system
  annotations:
    cert-manager.io/inject-ca-from: kube-system/block-wildcard-ingress-webhook-tls
webhooks:
  - name: block-wildcard-ingress-webhook.cluster.local
    admissionReviewVersions: ["v1beta1"]
    sideEffects: None
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        prm.managed: "true"
    clientConfig:
      service:
        name: block-wildcard-ingress-webhook
        namespace: kube-system
        path: /validate/webhook
    rules:
      - apiGroups: ["networking.k8s.io"]
        resources:
          - "ingresses"
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
